[gd_scene load_steps=28 format=2]

[ext_resource path="res://scenes/world/Shrine.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/hud/RainTimer.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/hud/HUD.gd" type="Script" id=4]
[ext_resource path="res://ui/icons.png" type="Texture" id=5]
[ext_resource path="res://ui/theme.tres" type="Theme" id=6]
[ext_resource path="res://ui/main_menu.png" type="Texture" id=7]
[ext_resource path="res://ui/hud/energy_bars.png" type="Texture" id=8]

[sub_resource type="Theme" id=1]

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 8 )
region = Rect2( 16, 0, 8, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 8, 64 )

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:tint_progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.431373, 0.666667, 0.470588, 1 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "flash"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:tint_progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.431373, 0.666667, 0.470588, 1 ) ]
}

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 8 )
region = Rect2( 16, 0, 8, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 8 )
region = Rect2( 8, 0, 8, 64 )

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ControlLayout/CloudMeter/CenterContainer/CloudBar:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ControlLayout/CloudMeter/CenterContainer/CloudBar:tint_progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.407843, 0.67451, 0.662745, 1 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "flash"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ControlLayout/CloudMeter/CenterContainer/CloudBar:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ControlLayout/CloudMeter/CenterContainer/CloudBar:tint_progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.407843, 0.67451, 0.662745, 1 ) ]
}

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 0, 16, 8, 8 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 0, 24, 8, 8 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 8, 16, 8, 8 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 8, 24, 8, 8 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 16, 168, 24, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 40, 168, 24, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 64, 168, 24, 24 )

[node name="HUD" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 6 )
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
script = ExtResource( 4 )

[node name="Shrine" parent="." instance=ExtResource( 2 )]
mouse_filter = 2

[node name="ControlLayout" type="HBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 316.0
margin_bottom = 176.0
mouse_filter = 2

[node name="WindMeter" type="VBoxContainer" parent="ControlLayout"]
margin_right = 16.0
margin_bottom = 172.0
mouse_filter = 2
custom_constants/separation = 0
alignment = 2

[node name="Control" type="Control" parent="ControlLayout/WindMeter"]
margin_top = 92.0
margin_right = 16.0
margin_bottom = 92.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="ControlLayout/WindMeter"]
margin_top = 92.0
margin_right = 16.0
margin_bottom = 156.0
mouse_filter = 2

[node name="WindBar" type="TextureProgress" parent="ControlLayout/WindMeter/CenterContainer"]
unique_name_in_owner = true
margin_left = 4.0
margin_right = 12.0
margin_bottom = 64.0
rect_min_size = Vector2( 4, 64 )
rect_pivot_offset = Vector2( 4, 32 )
mouse_filter = 2
theme = SubResource( 1 )
step = 0.01
value = 60.0
texture_under = SubResource( 22 )
texture_progress = SubResource( 21 )
fill_mode = 3
tint_progress = Color( 0.431373, 0.666667, 0.470588, 1 )

[node name="WindAnimationPlayer" type="AnimationPlayer" parent="ControlLayout/WindMeter/CenterContainer/WindBar"]
unique_name_in_owner = true
anims/RESET = SubResource( 19 )
anims/flash = SubResource( 18 )

[node name="WindIcon" type="TextureRect" parent="ControlLayout/WindMeter"]
unique_name_in_owner = true
margin_top = 156.0
margin_right = 16.0
margin_bottom = 172.0
mouse_filter = 2
texture = SubResource( 6 )
stretch_mode = 4

[node name="ControlHint" type="TextureRect" parent="ControlLayout/WindMeter/WindIcon"]
margin_left = -5.0
margin_top = -4.0
margin_right = 35.0
margin_bottom = 36.0
mouse_filter = 2
texture = SubResource( 8 )
stretch_mode = 4

[node name="WindTween" type="Tween" parent="ControlLayout/WindMeter/WindIcon"]
unique_name_in_owner = true

[node name="CloudMeter" type="VBoxContainer" parent="ControlLayout"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 172.0
mouse_filter = 2
custom_constants/separation = 0
alignment = 2

[node name="Control" type="Control" parent="ControlLayout/CloudMeter"]
margin_top = 92.0
margin_right = 16.0
margin_bottom = 92.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="ControlLayout/CloudMeter"]
margin_top = 92.0
margin_right = 16.0
margin_bottom = 156.0
mouse_filter = 2

[node name="CloudBar" type="TextureProgress" parent="ControlLayout/CloudMeter/CenterContainer"]
unique_name_in_owner = true
margin_left = 4.0
margin_right = 12.0
margin_bottom = 64.0
rect_min_size = Vector2( 4, 64 )
rect_pivot_offset = Vector2( 4, 32 )
mouse_filter = 2
theme = SubResource( 1 )
step = 0.01
value = 100.0
texture_under = SubResource( 23 )
texture_progress = SubResource( 20 )
fill_mode = 3
tint_progress = Color( 0.407843, 0.67451, 0.662745, 1 )

[node name="CloudAnimationPlayer" type="AnimationPlayer" parent="ControlLayout/CloudMeter/CenterContainer/CloudBar"]
unique_name_in_owner = true
root_node = NodePath("../../../../..")
anims/RESET = SubResource( 16 )
anims/flash = SubResource( 17 )

[node name="CloudIcon" type="TextureRect" parent="ControlLayout/CloudMeter"]
unique_name_in_owner = true
margin_top = 156.0
margin_right = 16.0
margin_bottom = 172.0
mouse_filter = 2
texture = SubResource( 5 )
stretch_mode = 4

[node name="ControlHint" type="TextureRect" parent="ControlLayout/CloudMeter/CloudIcon"]
margin_left = -5.0
margin_top = -4.0
margin_right = 35.0
margin_bottom = 36.0
mouse_filter = 2
texture = SubResource( 7 )
stretch_mode = 4

[node name="CloudTween" type="Tween" parent="ControlLayout/CloudMeter/CloudIcon"]
unique_name_in_owner = true

[node name="MoveInputs" type="VBoxContainer" parent="ControlLayout"]
margin_left = 40.0
margin_right = 66.0
margin_bottom = 172.0
mouse_filter = 2
custom_constants/separation = 1
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ControlLayout/MoveInputs"]
margin_top = 155.0
margin_right = 26.0
margin_bottom = 163.0
mouse_filter = 2
custom_constants/separation = 1
alignment = 1

[node name="UpInput" type="TextureRect" parent="ControlLayout/MoveInputs/HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.5 )
margin_left = 9.0
margin_right = 17.0
margin_bottom = 8.0
mouse_filter = 2
texture = SubResource( 9 )
stretch_mode = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="ControlLayout/MoveInputs"]
margin_top = 164.0
margin_right = 26.0
margin_bottom = 172.0
mouse_filter = 2
custom_constants/separation = 1
alignment = 1

[node name="LeftInput" type="TextureRect" parent="ControlLayout/MoveInputs/HBoxContainer2"]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.5 )
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 2
texture = SubResource( 10 )
stretch_mode = 4

[node name="DownInput" type="TextureRect" parent="ControlLayout/MoveInputs/HBoxContainer2"]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.5 )
margin_left = 9.0
margin_right = 17.0
margin_bottom = 8.0
mouse_filter = 2
texture = SubResource( 11 )
stretch_mode = 4

[node name="RightInput" type="TextureRect" parent="ControlLayout/MoveInputs/HBoxContainer2"]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.5 )
margin_left = 18.0
margin_right = 26.0
margin_bottom = 8.0
mouse_filter = 2
texture = SubResource( 12 )
stretch_mode = 4

[node name="VBoxContainer" type="HBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 316.0
margin_bottom = 176.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 24.0
margin_bottom = 172.0
mouse_filter = 2

[node name="SettingsButton" type="TextureButton" parent="VBoxContainer/VBoxContainer2"]
margin_right = 24.0
margin_bottom = 24.0
texture_normal = SubResource( 13 )
texture_pressed = SubResource( 14 )
texture_hover = SubResource( 15 )
stretch_mode = 3

[node name="Control" type="Control" parent="VBoxContainer"]
margin_left = 28.0
margin_right = 276.0
margin_bottom = 172.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 280.0
margin_right = 312.0
margin_bottom = 172.0
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/VBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0

[node name="RainTimer" parent="VBoxContainer/VBoxContainer/CenterContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_right = 32.0
margin_bottom = 32.0
mouse_filter = 2

[connection signal="pressed" from="VBoxContainer/VBoxContainer2/SettingsButton" to="." method="_on_SettingsButton_pressed"]
